//
// Use this to re-generate file: make grpc
//
syntax = "proto3";

package test;

option go_package = "peering/proto/generated";

import "peering/proto/advertisement.proto";
import "peering/proto/handshake.proto";
import "peering/proto/http.proto";
import "peering/proto/ping.proto";

service Peering {
    rpc Peer(stream PeerClientMessage) returns (stream PeerServerMessage);
}

message PeerClientMessage {
    oneof message {
        PeerMessage peer_message = 1;

        ClientHello client_hello = 2;
        HandShakeDone handshake_done = 3;
    }
}

message PeerServerMessage {
    oneof message {
        PeerMessage peer_message = 1;

        ServerHello server_hello = 2;
        PeerCloseByServer close_by_server = 3;
    }
}

enum CloseByServerReason {
    // Connection down detected (client or network transit closed connection)
    CONNECTION_DOWN = 0;
    HANDSHAKE_FAILURE = 1;
    INVALID_MESSAGE = 2;
}

message PeerCloseByServer {
    CloseByServerReason reason = 1;
}

message PeerMessage {
    oneof message {
        Advertisement advertisement = 1;
        Ping ping = 2;
        Pong pong = 3;
        HttpMessage http = 4;
    }
}
